--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.9.1",
     "@nextui-org/react": "^2.2.10",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,6 +30,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "daisyui": "^4.12.23",
@@ -36,8 +39,11 @@
     "fabric": "^5.5.0",
     "framer-motion": "^11.0.24",
     "lucide-react": "^0.469.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3",
     "nanoid": "^5.0.9",
     "next": "14.1.3",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
@@ -51,10 +57,12 @@
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/fabric": "^5.3.9",
     "@types/node": "^20",
     "@types/react": "^18",
