--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.15.1",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
