--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.15.1",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.0",
-    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.12.3",
