--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.0",
+    "react-responsive": "^10.0.0",
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.12.3",
